# feature-factory

./: README.rst  pyproject.toml
demo_databricks/: Simple_Example.py
feature_factory/demo/channel_demo_catalog/: __init__.py  sales.py
feature_factory/demo/channel_demo_feature_family_common/: sales.py  trends.py
feature_factory/demo/channel_demo_store/: __init__.py  sales.py
feature_factory/demo/channel_demo_web/: __init__.py  sales.py
feature_factory/framework/: channel.py  config_obj.py
feature_factory/framework/feature_factory/: __init__.py  data.py  dtm.py  feature.py  feature_family.py  helpers.py
tests/: conftest.py  test_config_obj.py  test_feature_dict.py  test_feature_factory.py  test_feature_family.py  test_feature_set.py  test_ff_helpers.py  test_joiner.py
