[tool.poetry]
name = "feature-factory"
version = "0.1.0"
description = ""
authors = ["cling"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "1.3.3"
py4j = "0.10.9"
pyarrow = "5.0.0"
pyspark = "3.1.2"
python-dateutil = "2.8.1"
scipy = "1.7.1"
six = "1.15.0"
coverage = "^6.4.2"
pytest = "5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
